minor ui changes

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ src/lib/components/CircularProgressBar.svelte
 .qodo/history.sqlite
 src/routes/\[username]/+page.js
 src/routes/\[username]/+page.svelte
+.qodo
